--- a/src/assets/css/_variable.scss
+++ b/src/assets/css/_variable.scss
@@ -26,7 +26,8 @@
   --cafe--font-xl: 1.5rem;
   --cafe--font-xxxl: 1.8rem;
 
-  --cafe--padding-xxs: 0.5rem;
+  --cafe--padding-xxxs: 0.5rem;
+  --cafe--padding-xxs: 0.75rem;
   --cafe--padding-xs: 1rem;
   --cafe--padding-sm: 1.5rem;
   --cafe--padding-lg: 2rem;
