--- a/src/assets/css/user/_popup.scss
+++ b/src/assets/css/user/_popup.scss
@@ -89,6 +89,7 @@
       letter-spacing: 0.2rem;
       align-items: center;
       background-color: var(--cafe-color-brown) !important;
+      cursor: pointer;
       &:hover {
         background-color: var(--cafe-color-white) !important;
       }
