--- a/src/assets/css/admin/_form.scss
+++ b/src/assets/css/admin/_form.scss
@@ -1,16 +1,107 @@
 @use "../mixin" as *;
 
 .form {
+  &__container {
+    @include style-color(var(--cafe-color-brown), var(--cafe-color-white));
+    @include border(transparent);
+    padding: var(--cafe--padding-sm);
+    display: grid;
+    column-gap: 4rem;
+    grid-template-rows: 22rem max-content;
+    grid-template-columns: 4fr 6fr;
+  }
+  &__UploadImg {
+    @include size(100%, 100%);
+  }
+}
+@media (max-width: 991px) {
+  .form {
     &__container {
-      @include style-color(var(--cafe-color-brown), var(--cafe-color-white));
-      @include border(transparent);
-      padding: var(--cafe--padding-sm);
-      display: grid;
-      column-gap: 4rem;
-      grid-template-rows: 25rem max-content;
-      grid-template-columns: 4fr 6fr;
-    }
-    &__UploadImg {
-      @include size(100%, 100%);
+      grid-template-columns: 5fr 5fr;
     }
   }
+}
+
+// input、select、textarea
+.form {
+  &__text-label {
+    font-size: 1.2rem;
+    font-weight: 700;
+  }
+  &__text-grid {
+    display: grid;
+    gap: 0.5rem;
+  }
+  &__text {
+    &-option {
+      padding: 0 var(--cafe--padding-lg);
+      color: var(--cafe-color-brown);
+      line-height: 1.7;
+      div {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        div {
+          font-size: var(--cafe--font-sm);
+          background-color: var(--cafe-color-gray);
+          color: var(--cafe-color-gray-darken);
+          letter-spacing: 0.1rem;
+          height: 100%;
+          padding: 0.5rem;
+          border-radius: 1rem;
+        }
+      }
+      h3,
+      h5 {
+        line-height: inherit;
+      }
+      li {
+        display: flex;
+        font-size: var(--cafe--font-md);
+        margin-bottom: var(--cafe--margin-xs);
+      }
+      h3 {
+        font-weight: 700;
+      }
+      h5 {
+        font-size: var(--cafe--font-sm);
+        color: var(--cafe-color-brown-lighter);
+        margin-bottom: var(--cafe--margin-xxs);
+      }
+      p {
+        margin-left: auto;
+        color: var(--cafe-color-gray-darken);
+      }
+      input {
+        width: 0;
+        visibility: hidden;
+      }
+      label {
+        display: flex;
+        align-items: center;
+        font-size: var(--cafe--font-md);
+        cursor: pointer;
+        position: relative;
+        padding-left: 2rem;
+      }
+      textarea {
+        @extend %base-btn-setting;
+        border-color: var(--cafe-color-brown-lighter);
+        padding: var(--cafe--padding-xxxs);
+        font-size: var(--cafe--font-lg);
+        color: var(--cafe-color-brown);
+        resize: none;
+        &:focus {
+          outline: none;
+          border-color: var(--cafe-color-brown);
+        }
+      }
+    }
+  }
+  &__message {
+    &-error {
+      color: var(--cafe-color-red-darken) !important;
+      background-color: var(--cafe-color-red) !important;
+    }
+  }
+}
