update: 完成自訂項目組件及修改餐點和新增餐點
1. 目前還尚未增加新增餐點功能

--- a/src/assets/css/admin/_form.scss
+++ b/src/assets/css/admin/_form.scss
@@ -115,6 +115,8 @@
     &-tag {
       @include style-color(var(--cafe-color-brown), var(--cafe-color-white));
       @include border(var(--cafe-color-brown-lighter));
+      min-height: 4rem;
+      height: auto;
       padding: 0.5rem;
       transition: all 0.3s ease-in-out;
       cursor: pointer;
